Ignore access problems due to JDK17 module restrictions.
Fixes access problems for
- XStream during Jenkins serialization
- Annotation processing in UI tests configuration with Guice